...
      body: Center(
        child: Column(
            mainAxisAlignment: MainAxisAlignment.center,
            children: <Widget>[
              Text(
                "How many cups would you like?",
                key: Key('how-many-cups'),
                style: TextStyle(
                    fontFamily: "Montserrat",
                    color: Colors.blueGrey,
                    fontSize: 20),
              ),
              Padding(
...
                child: Container(
                    decoration: BoxDecoration(
                        border: Border.all(color: Colors.blueGrey, width: 4),
                        borderRadius: BorderRadius.all(Radius.circular(10))),
                    height: 50,
                    child: TextFormField(
                      key: Key('input-textfield'),
                      keyboardType: TextInputType.number,
                      onChanged: (text) {
                        setState(() {
                          if (text.length > 0 && int.parse(text) > 0) {
                            isEnable = true;
                            widget.homebrew.cups = int.parse(text);
...
